--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -28,8 +28,8 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{title}</title>
-<meta name="title" content={title} />
+<title>{Rattlesnake Systems}</title>
+<meta name="title" content={Rattlesnake Systems} />
 <meta name="description" content={description} />
 
 <!-- Open Graph / Facebook -->
