--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,7 +16,8 @@ const socialUrl = Astro.site.href + 'assets/social.png'
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="icon" type="image/png" href="/snake.png" />
+
 
 <!-- Primary Meta Tags -->
 <title>{Astro.escapeHTML(title)}</title>
