--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,7 +16,7 @@ const socialUrl = Astro.site.href + 'assets/social.png'
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<link rel="icon" type="image/png" href="/snake.png" />
+<!--<link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
 
 
 <!-- Primary Meta Tags -->
