--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,7 +16,9 @@ const socialUrl = Astro.site.href + 'assets/social.png'
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<!--<link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" /> 
+<link rel="stylesheet" href="@styles/fonts.css">
+
 
 
 <!-- Primary Meta Tags -->
