--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,8 @@ import Layout from '../layouts/BlogPost.astro';
 	heroImage="/blog-placeholder-about.jpg"
 >
 	<p>
-		https://www.dropbox.com/scl/fi/oc4en046bvzx28pox3l48/Rattlesnake-Systems-Deck.pdf?rlkey=4kp4kv8cef1yo6m610353ynyj&st=kwc11sqx&dl=0
-	</p>
+<a href="https://www.dropbox.com/scl/fi/oc4en046bvzx28pox3l48/Rattlesnake-Systems-Deck.pdf?rlkey=4kp4kv8cef1yo6m610353ynyj&st=kwc11sqx&dl=0
+	</p>">Pitch Deck</a>
+		
 
 </Layout>
