--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,16 +3,16 @@ import Layout from '../layouts/BlogPost.astro';
 ---
 
 <Layout
-	title="About Us"
+	title="About Me"
 	description="Lorem ipsum dolor sit amet"
 	pubDate={new Date('August 08 2021')}
 	heroImage="/blog-placeholder-about.jpg"
 >
 	<p>
-<a href="https://www.dropbox.com/scl/fi/oc4en046bvzx28pox3l48/Rattlesnake-Systems-Deck.pdf?rlkey=4kp4kv8cef1yo6m610353ynyj&st=kwc11sqx&dl=0
-	">Pitch Deck</a>
+              <a href="https://www.dropbox.com/scl/fi/oc4en046bvzx28pox3l48/Rattlesnake-Systems-Deck.pdf?rlkey=4kp4kv8cef1yo6m610353ynyj&st=kwc11sqx&dl=0
+	       ">Pitch Deck</a>
 
-</p>
+        </p>
 		
 
 </Layout>
